OrderService/Kubernetes/rabbitmq/rabbitmqgoodfood-develop-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: rabbitmqgoodfood-develop
  name: rabbitmqgoodfood-develop
spec:
  ports:
    - name: "webadmin"
      port: 80
      targetPort: 15672
    - name: "amqp"
      port: 5672
      targetPort: 5672
  selector:
    io.kompose.service: rabbitmqgoodfood-develop
status:
  loadBalancer: {}
