OrderService/Kubernetes/rabbitmq/rabbitmqgoodfood-develop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rabbitmqgoodfood-develop
spec:
  ingressClassName: nginx
  rules:
  - host: "rabbitmq.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmqgoodfood-develop
            port:
              number: 80
